@@ -20,6 +20,7 @@ int main (void)
   srunner_add_suite(sr, make_list_suite());
   srunner_add_suite(sr, make_msg_suite());
   srunner_add_suite(sr, make_log_suite());
+  srunner_add_suite(sr, make_log_internal_suite());
   srunner_add_suite(sr, make_limit_suite());
   srunner_add_suite(sr, make_fork_suite());
   srunner_add_suite(sr, make_fixture_suite());
